--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --runInBand",
+    "test": "jest --setupFiles dotenv/config --watchAll --runInBand",
     "dev": "nodemon app.js"
   },
   "keywords": [],
